codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pending_steer_already_submitted_warning.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: warning
---
⚠ Message was already submitted and can no longer be edited.
