codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1647
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.
    ⇧← edit last queued message

› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
